Added to Matella content

--- a/Matella/resources/foodAndDrink.html
+++ b/Matella/resources/foodAndDrink.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Foods and Drinks</title>
 </head>
 <body>
     <div class="main-container">
@@ -10,6 +10,7 @@
         <ul>
             <li>Moonberry Juice (5c/glass)</li>
             <li>Melon Juice (6c/glass)</li>
+            <li>Vita-meata-vegamin</li>
         </ul>
         <h1>Alcoholic Drinks</h1>
         <ul>
@@ -18,17 +19,36 @@
                     <li>Bubbly Champaigne (4s/glass) - A sour garden apple and green current champaign</li>
                     <li>Bubble Blue Ale (4s/cup) - A bilberry infused ale</li>
                     <li>Bubbly Bitters (7s/shot) - A warm oak and pomegranate </li>
-                    <li>The Bubbly Bubble (1g/glass) - This is a shot of Bubble Bitters mixed with some Bubbe Blue Ale and one more secret ingredient.</li>
+                    <li>The Bubbly Bubble (1g/glass) - This is a shot of Bubble Bitters mixed with some Bubble Blue Ale and one more secret ingredient.</li>
                 </ul>
             </li>
-            <li>Bentley May Bourbon (3s/shot)</li>
-            <li>Cherry Grog (3s/glass)</li>
             <li>Wines
                 <ul>
                     <li>Bottle of Pinot Noir (2s/glass - 1g/bottle)</li>
                     <li>Eversalt Summer Wine (3s/glass)</li>
+                    <li></li>
                 </ul>
             </li>
+            <li>Scotches
+            <ul>
+                <li></li>
+                <li></li>
+            </ul>
+        </li>
+            <li>Whiskeys
+                <ul>
+                    <li>Bentley May Bourbon (3s/shot)</li>
+                    <li></li>
+                </ul>
+            </li>
+            <li>Beers and Stouts
+                <ul>
+                    <li>Cherry Grog (3s/glass)</li>
+                    <li>Frobscottle (2g/glass) - A drink which tastes of vanilla and, in someones words, "makes you whizzpop".</li>
+                    <li>Butterbeer (5c/glass)</li>
+                </ul>
+            </li>
+
         </ul>
         <h1>Foods</h1>
         <ul>
