--- a/Matella/rivers/QueyRiver.html
+++ b/Matella/rivers/QueyRiver.html
@@ -33,10 +33,10 @@
         <p>The Elvan tablet reads "The Egg of Equestador; This creature is my pride and joy. If I am lost to it, please be sure to provide care and protection to it as it matures. It requires warmth and darkness, and of course, love. -Kenneth Zud".</p>
         <img src="images/fangWallCompartment.jpg" alt="fangWallCompartment" style="max-width: 50%;"><img src="images/kennethZudTabletForEggt.jpg" alt="kennethZudTabletForEggt" style="max-width: 25%;">
         <ol>
-            <li><a href="../items/fangOfPellinore.html">The Fang Of Pellinore</a></li>
-            <li><a href="../items/fangOfAzshira.html">The Fang Of Azshira</a></li>
-            <li><a href="../items/fangOfEssieldore.html">The Fang Of Essieldore</a></li>
-            <li><a href="../items/fangOfElaine.html">The Fang Of Elaine</a></li>
+            <li><a href="../weapons/fangOfPellinore.html">The Fang Of Pellinore</a></li>
+            <li><a href="../weapons/fangOfAzshira.html">The Fang Of Azshira</a></li>
+            <li><a href="../weapons/fangOfEssieldore.html">The Fang Of Essieldore</a></li>
+            <li><a href="../weapons/fangOfElaine.html">The Fang Of Elaine</a></li>
         </ol>
     </div> <!-- END MAIN CONTAINER -->
 </body>
