Added to Matella content

--- a/Matella/resources/plantsAndHerbs.html
+++ b/Matella/resources/plantsAndHerbs.html
@@ -32,9 +32,21 @@
             <li>Earthroot - Can be found along cliff faces and hills and tends to grow on the sides of cliffs facing away from the sunrise. This root is high in phytonutrients and is known for it's ability to provide high energy when consumed. It's often used in vitality and fortitude potions.</li>
             <li>Liferoot - A green and brown herb. When split open, the inside contains many thin strands, almost like tiny muscle fibers. This herb has many medicinal properties and is often used to treat hangovers.</li>
         </ul>
+
         <h1>Berries and Fruits</h1>
         <ul>
             <li>Dayberry - This berry is a bright yellow. It is sweet with a bitter aftertaste.</li>
+        </ul>
+
+        <h1>Fungi and Mushrooms</h1>
+        <ul>
+            <li>Crystaltops - This is a light blue mushroom with dark black spots on it. It is poisonous if consumed raw, but when cooked, the toxins escape in their gaseous form. These are used in many gourmet dishes. Although poisonous if consumed, the raw mushrooms can be ground into a paste that serves as various cremes for various purposes.</li>
+            <li>Dreaming Glory</li>
+            <li>Flamecap</li>
+            <li>Glowcap</li>
+            <li>Icecap</li>
+            <li>Ragveil</li>
+            <li>Shitaki</li>
         </ul>
     </div>
 </body>
