Added various info

--- a/Matella/indexOfThings.html
+++ b/Matella/indexOfThings.html
@@ -56,6 +56,12 @@
             <ul>
                 <li><a href="resources/foodAndDrink.html">Food and Drinks</a></li>
                 <li><a href="resources/plantsAndHerbs.html">Plants and Herbs</a></li>
+                <li><a href="resources/musicAndAmbiance.html">Music and Ambiance</a></li>
+            </ul>
+
+            <h2>Logistics</h2>
+            <ul>
+                <li><a href="rules.html">Campaign Rules</a></li>
             </ul>
         </div>
     </div>
