--- a/Matella/kingdoms/LochModar.html
+++ b/Matella/kingdoms/LochModar.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tinko Merz</title>
+    <title>Loch Modar</title>
 </head>
 <body>
     <div class="main-container">
-        <h1>Tinko Merz</h1>
+        <h1></h1>
     </div>
 </body>
 </html>
