--- a/Matella/characters/KennethZud.html
+++ b/Matella/characters/KennethZud.html
@@ -14,7 +14,9 @@
         <h2>The Labs of Kenneth</h2>
         <p>Kenneth creates his labs hidden in caves and is very good at hiding their entrances among the natural surroundings. He tends to not stay in one place very often and is constantly traveling. On occasion, he hides relics and artifacts he finds in his labs for him to return to and retrieve later.</p>
         <h3><a href="../rivers/QueyRiver.html#kennethZudLabQueyIsland">kenneth Zud's Lab on QueyIsland</a></h3>
-        <p>On his way to <a href="../towns/Dessaquest.html">Dessaquest</a>, Kenneth spent a few days setting up a secret lab on Quey Island just south of the town. He used this as a secret base camp during his time in <a href="../towns/Dessaquest.html">Dessaquest</a> before creatign a second lab to the north of the town before his travels north.</p>
+        <p>On his way to <a href="../towns/Dessaquest.html">Dessaquest</a>, Kenneth spent a few days setting up a secret lab on Quey Island just south of the town. He used this as a secret base camp during his time in <a href="../towns/Dessaquest.html">Dessaquest</a> before creating a second lab to the north east of the town before planning his travels north.</p>
+        <h3>The Last Forgotten Lab of Kenneth Zud</h3>
+        <p>While in his laboratory northeast of <a href="../towns/Dessaquest.html">Dessaquest</a>, Kenneth Zud opened a portal to a temporal dimension. From within this dimension, a parasitic being from the future (Gotto) came through and took control of Kenneth Zud. This being took control of his thoughts and mind and used this Lab as a base to gather strength. With only a few supplies from his future time, he further established a protected area within the cavern. This area was created using some futuristic technology. Information about this can be found here: <a href="Gotto/Goro%20Mechanics.pdf">Emporium of Gotto</a>. </p>
     </div>
 </body>
 </html>
