--- a/Matella/towns/Dessaquest.html
+++ b/Matella/towns/Dessaquest.html
@@ -41,7 +41,7 @@
         <p>Maxwell Loren owns a Lumber mill that is worked by him and his two sons, Jean and Tenoth. The Mill focuses on creating lumber for building and a special kind of sap chips used for animal feed.</p>
 
         <h2>Kendril's Smithery</h2>
-        <p>Kendril's Smithery is ran by Kendril Megatto. Kendril has an apprentice, Dendra Tult, who has been working as a smither for a few years. Kendril specializes in precision tools and building materials, which Dendra has taken a liking to more weapon forging, which he is still a novice at.</p>
+        <p>Kendril's Smithery is ran by <a href="../characters/KentrilMagatto.html">Kendril Megatto</a>. Kendril has an apprentice, <a href="../characters/DendraTult.html">Dentra Tult</a>, who has been working as a smither for a few years. Kendril specializes in precision tools and building materials, which Dendra has taken a liking to more weapon forging, which he is still a novice at.</p>
 
         <h2>StarBrooke Graveyard</h2>
         <p>The graveyard is just a typical graveyard.</p>
@@ -50,7 +50,7 @@
         <p>The Dessala Farms are primarily run by the descendants of <a href="../characters/Dessa.html#BhomianDessa">Bhomian Dessa</a>. This includes Tonya Dessala, Bren Dessala (Married to Tonya), and Gilb Dessalla. They typically hire other young hands from the village when further assistance is needed. The specialized crops grown here include an Einkorn Wheat and and blue corn called Maeza corn. Maeza is a primary ingredient in many clear alcohols created throughout the region. The farms are home to a variety of animals such as sheep, horses, hogs, and a large breed of bullfrog.</p>
 
         <h2>Denko's Library</h2>
-        <p> Berinold Denko runs the library and spends his time reading and collecting knowledge for the Dessaquest library.</p>
+        <p>Berinold Denko runs the library and spends his time reading and collecting knowledge for the Dessaquest library.</p>
 
         <h2>Flourishing Floristry</h2>
         <p>Maybell Declure is a young (mid 40's) lady who focuses entirely on growing and crossbreading flowers and plants. She spreads and plants her flowers around town to give it a much more inviting. She grows a large variety of plants that can be used for medicinal, food, apothecary, ink, and more. Some rare specialized plants grown by Maybell include the following</p>
@@ -68,7 +68,8 @@
         <h2>Maeza Physiciantry</h2>
         <p>An elder fella, Decan Meaz, runs a physician station out of his home. He serves as the town doctor and dabbles in alchemy with his wife Sendri. Decan's family is the one who invented the strain of corn that Dessaquest is known for in the surrounding regions, the Maeza.</p>
 
-
+        <h2>The Last Forgotten Lab of Kenneth Zud</h2>
+        <p>The the northeast side of the town, along the shore, lies a hidden cavern containing the last laboratory of Kenneth Zud before he went missing.</p>
 
     </div> <!-- END MAIN CONTAINER -->
 </body>
