Updated planet/sun links to take you to the database

--- a/solarSystem.html
+++ b/solarSystem.html
@@ -125,7 +125,7 @@
 						<!-- Sun -->
 						<div class="row">
 							<div class="col-md-4">
-								<p class="planet-image-left section-description-planet"><a href=""><img alt="sun-image" class="planet-img box" src="web-img/Sun-wide.png"/></a></p>
+								<p class="planet-image-left section-description-planet"><a href="database/index.html"><img alt="sun-image" class="planet-img box" src="web-img/Sun-wide.png"/></a></p>
 							</div>
 							<div class="col-md-8">
 								<h3 class="planet-section-right planet-header">System Star (Unnamed)</h3>
@@ -154,7 +154,7 @@
 								-->
 							</div>
 							<div class="col-md-4">
-								<p class="planet-image-right section-description-planet"><a href=""><img alt="main-planet-image" class="planet-img box" src="web-img/mainPlanet.png"/></a></p>
+								<p class="planet-image-right section-description-planet"><a href="database/index.html"><img alt="main-planet-image" class="planet-img box" src="web-img/mainPlanet.png"/></a></p>
 							</div>
 						</div>
 					</div>	
