--- a/index.html
+++ b/index.html
@@ -156,6 +156,24 @@ Presently, the project is in its infancy. The initial launch will encompass the 
 			<div class="Divider">
 				<hr class="Divider-rule">
 			</div>		
+			
+			<!-- ============== Contact SECTION =============== -->
+			<div class="black-texture row pattern">
+				<section class="information" id="contact">
+					<div class="container">
+						<div class="row">
+							<h2 class="text-align-center">Contact</h2>
+							<p class="section-description">For all inquiries or comments, please use the following email address as the primary contact method.</p>
+							<p class="text-noticeable text-align-center section-description" style="margin-bottom:0;">Email: MMORPDND@gmail.com</p>
+						</div>
+					</div>	
+				</section>
+			</div>
+			
+			<!-- ============== DIVIDER ============== -->
+			<div class="Divider">
+				<hr class="Divider-rule">
+			</div>
 				
 			<!-- ============== BEGIN FOOTER - PYTHON ENCODED =============== -->
 			<div class="row pattern-dark">
