--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 										<div class="dropdown-content">
 											<ul class="nav">
 												<div class="plain-link"><a href="index.html#about">About</a></div>
+												<div class="plain-link"><a href="index.html#howto">How To</a></div>
+												<div class="plain-link"><a href="index.html#contact">Contact</a></div>
 											</ul>
 										</div>
 									</li>
