--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ Presently, the project is in its infancy. The initial launch will encompass the 
 
                             <h2>For Players and Enthusiasts:</h2>
                             <ol>
-                                <li><strong>Accessing the Database:</strong> Visit this website at <a href="https://MMORPDND.github.io">MMORPDND.github.io</a>. Use the "Database" button in the navigation bar.</li>
-                                <li><strong>Exploring the Content:</strong> Click "Database" to access the D&D information.</li>
-                                <li><strong>Viewing Details:</strong> Click on an entry for detailed information about creatures, spells, items, and more.</li>
+                                <li><strong>Accessing the Database:</strong> Visit this website at <a href="https://MMORPDND.github.io">MMORPDND.github.io</a>. Use the "<a href="https://mmorpdnd.github.io/database/campaign/index.html">Database</a>" button in the navigation bar.</li>
+                                <li><strong>Exploring the Content:</strong> Click "<a href="https://mmorpdnd.github.io/database/campaign/index.html">Database</a>" to access the D&D information.</li>
+                                <li><strong>Viewing Details:</strong> Click on an entry and explore the subdirectories for detailed information about creatures, spells, items, and more.</li>
                             </ol>
                             
                             <h2>For Developers:</h2>
