--- a/index.html
+++ b/index.html
@@ -164,9 +164,11 @@ Presently, the project is in its infancy. The initial launch will encompass the 
 				<section class="information" id="contact">
 					<div class="container">
 						<div class="row">
-							<h2 class="text-align-center">Contact</h2>
-							<p class="section-description">For all inquiries or comments, please use the following email address as the primary contact method.</p>
-							<p class="text-noticeable text-align-center section-description" style="margin-bottom:0;">Email: MMORPDND@gmail.com</p>
+							<div class="section-description">
+								<h2 class="text-align-center">Contact</h2>
+								<p>For all inquiries or comments, please use the following email address as the primary contact method.</p>
+								<p class="text-noticeable text-align-center">Email: MMORPDND@gmail.com</p>
+							</div>
 						</div>
 					</div>	
 				</section>
