--- a/index.html
+++ b/index.html
@@ -101,13 +101,11 @@
 				<section class="information" id="about">
 					<div class="container">
 						<div class="row">
-							<h2 class="text-align-center">About</h2>
-							<p class="section-description">
-								MMORPDND (Massively Multiplayer Online Role-Playing Dungeons and Dragons) strives to serve as an open-source Dungeons and Dragons universe, welcoming contributions from all enthusiasts. The objective is to craft a solar system that boasts coherence, depth, and meticulous detail, providing a sturdy framework for individuals to seamlessly infuse their personal creativity into DND campaigns. Central to this endeavor are high-definition maps and landscapes, available for players to lay claim upon, adapting and tailoring them to suit their unique objectives. The architecture is designed with simplicity in mind, incorporating specialized tools to ensure organization and user-friendly navigation for effortless expansions.
-							</p>
-							<p class="section-description">
-Presently, the project is in its infancy. The initial launch will encompass the debut of the first fully developed planet, primed for utilization by fellow creators.
-							</p>
+							<div class="section-description">
+								<h2 class="text-align-center">About</h2>
+								<p>Dungeons and Dragons (D&D or DnD) is a highly customizable and adaptable tabletop role-playing game that empowers players to create unique and immersive fantasy worlds. With a flexible rule system, players can personalize their characters, craft intricate narratives, and modify the game to suit their preferences. The game's expansiveness allows for limitless creativity, making it a dynamic and ever-evolving experience where imagination takes center stage.</p>
+								<p>MMORPDND (Massively Multiplayer Online Role-Playing Dungeons and Dragons) strives to serve as an open-source Dungeons and Dragons universe, welcoming contributions from all enthusiasts. The objective is to craft a solar system that boasts coherence, depth, and meticulous detail, providing a sturdy framework for individuals to seamlessly infuse their personal creativity into DND campaigns. Central to this endeavor are high-definition maps and landscapes, available for players to lay claim upon, adapting and tailoring them to suit their unique objectives. The architecture is designed with simplicity in mind, incorporating specialized tools to ensure organization and user-friendly navigation for effortless expansions.</p>
+								<p>Presently, the project is in its infancy. The initial launch will encompass the debut of the first fully developed planet, primed for utilization by fellow creators.</p>
 						</div>
 					</div>	
 				</section>
